# python-pytest-testing-project-79

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: main.yml
hexlet_code/: __init__.py  cmd_parser.py  page_loader.py
hexlet_code/scripts/: page_loader.py
page_loader/: __init__.py  app_logger.py  known_exception.py  page_loader.py
page_loader/scripts/: page_loader.py
tests/: conftest.py  test_download.py  test_exceptions.py  test_get_html.py  test_get_pics.py
tests/fixtures/: application.css  hexlet.html  hexlet_pic.html  hexlet_result.html  runtime.js
