[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["dkulikova <d.d.kulikova@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.0"

[tool.poetry.scripts]
page-loader = "hexlet_code.scripts.page_loader:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
requests-mock = "^1.9.3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["page_loader"]
